add additional fields recommended by goodpractice

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: mstats
 Type: Package
 Title: Some Miscellaneous Statistical Functions
-Version: 0.1.0
+Version: 0.1.1
 Author: Alex M Trueman
 Maintainer: Alex M Trueman <amt4158@gmail.com>
 Description: Just a bunch of statistical functions that I have written and use
     in various functions and other personal packages.
+URL: https://github.com/truemoid/mstats
+BugReports: https://github.com/truemoid/mstats
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
