--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,11 +24,13 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_all)
 importFrom(dplyr,summarise_at)
+importFrom(dplyr,tibble)
 importFrom(graphics,plot)
 importFrom(magrittr,"%>%")
 importFrom(pander,pander)
 importFrom(purrr,map)
 importFrom(rlang,"!!!")
+importFrom(rlang,"!!")
 importFrom(rlang,UQ)
 importFrom(rlang,enquo)
 importFrom(rlang,quo_name)
