refactored for more efficient use with tidyverse

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(boot_wmean_ci)
 export(descstat)
 export(extended_sumstats)
 export(means_by_group)
-export(nscore)
+export(nscore_model)
 export(sumstats)
 export(topcut_sumstats)
 export(weighted_sumstats)
@@ -24,13 +24,11 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_all)
 importFrom(dplyr,summarise_at)
-importFrom(dplyr,tibble)
 importFrom(graphics,plot)
 importFrom(magrittr,"%>%")
 importFrom(pander,pander)
 importFrom(purrr,map)
 importFrom(rlang,"!!!")
-importFrom(rlang,"!!")
 importFrom(rlang,UQ)
 importFrom(rlang,enquo)
 importFrom(rlang,quo_name)
