add additional stats to descstat; improve docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ importFrom(dplyr,summarise_all)
 importFrom(dplyr,summarise_at)
 importFrom(graphics,plot)
 importFrom(magrittr,"%>%")
+importFrom(moments,skewness)
 importFrom(pander,pander)
 importFrom(purrr,map)
 importFrom(rlang,"!!!")
